# MA_Backup

./: README.md
influxdb_test/: package.xml  setup.cfg  setup.py
influxdb_test/influxdb_test/: heatmap_test.py  min_distance_sub_inDB.py  nuitrack_to_InfluxDB.py
lop2/: package.xml  setup.cfg  setup.py
lop2/config/: config.rviz  depth_only.rviz  image_only.rviz  marker.rviz  simple.rviz
lop2/data/: realsense-config.yaml
lop2/launch/: before_ur5e.launch.py  main.launch.py  ur5e_sim.launch.py
lop2/lop2/: conv.py  get_parameters.py  keypoints.py  load_state.py  lop_node.py  loss.py  one_euro_filter.py  pose.py  val.py  with_mobilenet.py
nuitrack_pointcloud/: CMakeLists.txt  package.xml
nuitrack_pointcloud/launch/: nuitrack.launch.py
nuitrack_pointcloud/src/: nuitrack_skeleton_pointcloud.cpp  nuitrack_skeleton_pointcloud_camera2.cpp
pointcloud_processing/: CMakeLists.txt  package.xml
pointcloud_processing/src/: handover_T_inhand_detector.cpp  handover_grasping_detector.cpp  multi_pointcloud.cpp  robot_self_filter.cpp
pointcloud_processing_nuitrack/: CMakeLists.txt  package.xml
pointcloud_processing_nuitrack/src/: handover_T_inhand_detector.cpp  min_distance.cpp  pointcloud_filter.cpp
robot_control_handover/: CMakeLists.txt  package.xml
robot_control_handover/launch/: robot_handover_state_machine.launch.py
robot_control_handover/src/: robot_handover_state_machine.cpp
robot_control_ssm/: CMakeLists.txt  package.xml
robot_control_ssm/launch/: min_distance.launch.py  robot_joint_position.launch.py  robot_speed_separation.launch.py
robot_control_ssm/src/: min_distance.cpp  robot_joint_position.cpp  robot_speed_separation.cpp
